Hotfix: Fixing build errors + disabling the screen section

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/)
@@ -39,6 +39,6 @@ add_subdirectory(accounts)
 add_subdirectory(bluez)
 add_subdirectory(mpris)
 add_subdirectory(networkmanagement)
-add_subdirectory(screen)
+# add_subdirectory(screen)
 add_subdirectory(system)
 add_subdirectory(audio)
